Refactor auth flow: enforce roles and stop trusting client-provided user data
Introduced role checks using @PreAuthorize

Use SecurityContextHolder to retrieve the authenticated user

Updated controllers and services to follow this pattern